--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,13 +1,8 @@
 ## Abstract {.page_break_before}
 
-Introduction to transportation planning
-UNIVERSITY OF ILLINOIS AT URBANA-CHAMPAIGN
-DEPARTMENT OF CIVIL AND ENVIRONMENTAL ENGINEERING
+**Bold** __ABCD__
 
-CEE492 DS – Data Science for CEE - Fall 2022
-
-
-title: "A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure"
+[Semi-bold "A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure"]{.semibold}
 Amirthavarshini Muraleetharan1, Kapil Shah2, Thomas Ngare Matiki3
 A nationwide dataset of road construction and closure events, including data from all 49 US states is chosen for the project. The roadwork included in this dataset's construction events ranges from minor paving repairs to significant undertakings that might take months to complete. Several APIs that provide streaming traffic incident (or event) data are used to collect the data between January 2016 and December 2021. These APIs transmit traffic information gathered by several organizations, including the US and state departments of transportation, law enforcement organizations, traffic cameras, and traffic sensors embedded in the road networks. The number of construction and shutdown records in this dataset currently stands at roughly 6.2 million. 
 In general, this dataset can be used for a wide range of applications, including the prediction of short- and long-term road construction, the prediction of road closures, the study of the life cycle of road construction, the development of insights to help city planners choose construction sites wisely with the most negligible negative impact on traffic flow, and the investigation of the influence of precipitation or other environmental stimuli on the need for road work. The dataset is being updated on an annual basis. The data will be obtained from US Road Construction and Closures (2016 - 2021), Kaggle, and it is available in CSV format. Presently, the dataset contains 6,170,627 observations comprising of features like Construction severity, Latitude and longitude, Precipitation, Traffic signal and many such taking a total of 47 columns. Table 1 elaborates the specifics of this data set.
