--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,50 +1,13 @@
 ## Abstract {.page_break_before}
 
-__ABCD__
-
-["A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure"]{.semibold}
-
-
-Amirthavarshini Muraleetharan1, Kapil Shah2, Thomas Ngare Matiki3
+__A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure__
 
 A nationwide dataset of road construction and closure events, including data from all 49 US states is chosen for the project. The roadwork included in this dataset's construction events ranges from minor paving repairs to significant undertakings that might take months to complete. Several APIs that provide streaming traffic incident (or event) data are used to collect the data between January 2016 and December 2021. These APIs transmit traffic information gathered by several organizations, including the US and state departments of transportation, law enforcement organizations, traffic cameras, and traffic sensors embedded in the road networks. The number of construction and shutdown records in this dataset currently stands at roughly 6.2 million. 
 In general, this dataset can be used for a wide range of applications, including the prediction of short- and long-term road construction, the prediction of road closures, the study of the life cycle of road construction, the development of insights to help city planners choose construction sites wisely with the most negligible negative impact on traffic flow, and the investigation of the influence of precipitation or other environmental stimuli on the need for road work. The dataset is being updated on an annual basis. The data will be obtained from US Road Construction and Closures (2016 - 2021), Kaggle, and it is available in CSV format. Presently, the dataset contains 6,170,627 observations comprising of features like Construction severity, Latitude and longitude, Precipitation, Traffic signal and many such taking a total of 47 columns. Table 1 elaborates the specifics of this data set.
-
-
-
-
 		
 Using this dataset, a machine learning model will be developed to predict road closure events, given inputs of pertinent features as mentioned in the below Table 1. measurements from pertinent features that will be determined in this study. The developed algorithm will be tested on about 20% of the total samples, and validated with another 20% of the total samples, to be made suitable for real-time applications. The proposed algorithm will have the potential to estimate the likelihood that every road segment satisfying certain requirement will be is closed or open, such that it can be employed in mobile maps (like Google maps). Whenever the likelihood of a closure event exceeds a predetermined threshold, customer can be notified to find the efficient route. For mapping applications, this algorithm can it will automatically update maps further add to its real time monitoring. 
 
 To achieve this goal, data wrangling will be performed. The essential data frames for the study will be extracted from the original dataset followed by Exploratory Analysis. Exploratory analysis will enable us to drive insights by forming a pattern for better visualization and exploration.  be performed to make sense of the data and visualize them for better exploration. Based on the analysis, a classification model will be developed to predict the class or category for the data or draw a conclusion to the input data given for training. The developed model will be tested for various conditions.
-
-
-
-| *Features* | Description          |
-|:-----------------|:-------------:|
-| ID | 
-|Severity |
-|Start and End Time |
-|End Time |
-|Latitude and Longitude |
-|Distance |
-|Street Details |
-|Address Details |
-|Time zone |
-|Weather |
-|Temperature, Wind, Humidity, and Pressure |
-|Visibility |
-|Wind Direction and Speed |
-|Precipitation and Weather condition |
-|Amenity |
-|Bump and Crossing |
-|Give way, Junction, railway |
-|Exit, Roundabout, Station, Stop |
-|Traffic Details |
-|Light Details |
-
-Table: Description of undertaking dataset.
-{#tbl:bowling-scores}
 
 | *Features* | Description          |
 |:-----------------|:-------------:|
