--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -5,9 +5,9 @@ In general, this dataset can be used for a wide range of applications, including
 		
 Using this dataset, a machine learning model will be developed to predict road closure events, given inputs of pertinent features as mentioned in the below table @tbl:features. measurements from pertinent features that will be determined in this study. The developed algorithm will be tested on about 20% of the total samples, and validated with another 20% of the total samples, to be made suitable for real-time applications. The proposed algorithm will have the potential to estimate the likelihood that every road segment satisfying certain requirement will be is closed or open, such that it can be employed in mobile maps (like Google maps). Whenever the likelihood of a closure event exceeds a predetermined threshold, customer can be notified to find the efficient route. For mapping applications, this algorithm can it will automatically update maps further add to its real time monitoring. 
 
-To achieve this goal, data wrangling will be performed. The essential data frames for the study will be extracted from the original dataset followed by Exploratory Analysis. Exploratory analysis will enable us to drive insights by forming a pattern for better visualization and exploration.  be performed to make sense of the data and visualize them for better exploration. Based on the analysis, a classification model will be developed to predict the class or category for the data or draw a conclusion to the input data given for training. The developed model will be tested for various conditions.
+To achieve this goal, data wrangling will be performed. The essential data frames for the study will be extracted from the original dataset followed by exploratory analysis. Exploratory analysis will enable us to drive insights by forming a pattern for better visualization and exploration be performed to make sense of the data and visualize them for better exploration. Based on the analysis, a classification model will be developed to predict the class or category for the data or draw a conclusion to the input data given for training. The developed model will be tested for various conditions.
 
-|Features|[Description]{.right}|
+|[Features]{.center}|[Description]{.center}|
 |:-----------------|:-------------:|
 |ID|Unique identifier of construction record|
 |Severity|Shows the severity of the construction|
