--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -35,7 +35,7 @@ Table: Description of Undertaking Dataset
 
 Once successfully tested, this algorithm can further be developed (given the time permits) to choose construction sites which has less impact of traffic flow, thereby guiding city planners. Also, a study can be undertaken to understand the impact of precipitation on the need of road work. 
 
-[References]:{.semibold}
+[References:]{.semibold}
 
 1. Karimi Monsefi, Amin, Sobhan Moosavi, and Rajiv Ramnath. “Will there be a construction? Predicting road constructions based on heterogeneous spatiotemporal data.”, _2022_
 
