--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -30,45 +30,45 @@ To achieve this goal, data wrangling will be performed. The essential data frame
 |Traffic Details|Annotations which indicate traffic calming, signal, turning loop|
 |Light Details|Annotations which indicate sunrise, sunset, civil twilight, nautical twilight, astronomical twilight|
 
-Table: Description of Undertaking Dataset
+[Table: Description of Undertaking Dataset]{.semibold}
 {#tbl:features}
 
-2.0 Data Wrangling and Exploratory Data Analysis
+[2.0 Data Wrangling and Exploratory Data Analysis]{.semibold}
 The data obtained from Kaggle is highly generic and unstructured, hence unsuited for analysis in its raw form. To achieve the goals of our design, an initial data wrangling was performed to put the data in the right format followed by EDA to determine pertinent features that affect road construction duration in USA.
 
-2.1.1 Data Cleaning
+[2.1.1 Data Cleaning]{.semibold}
 The csv file obtained from Kaggle was composed of over 6.1 million observations, which would have been computationally expensive to work with. To reduce the burden of computational time, while still retaining a good representation of the data, 1,048,575 observations (15% original data) were randomly selected with R. The data was converted to a data frame format suitable for analysis with Julia. However, some features were discovered with missing entries, which would be adversarial to subsequent codes and functions. To resolve this problem, a package in Julia (Missing package) was leveraged to filter out all observations with one or more missing entries. This process further reduced the size of the dataset to 482,849. Then, an intuitive search was made of pertinent features that could affect road construction duration, like the length of the road extent affected by the construction (denoted by “Distance” in miles), the total amount of precipitation, and other environmental factors. Although some of these pertinent features were discovered, most of the entries of each observation of these features were not in the format suitable for visualization (which requires real numbers) i.e., some variables were Strings, or Boolean values, hence the need to clean the data. Table 2 below shows a segment of the dataset after it has been roughly sampled, and missing entries removed, while Table 3 shows the summary of the dataset.
 
-Table 2: Dataset of road construction projects in USA 
+[Table 2: Dataset of road construction projects in USA]{.semibold} 
 
+src="C:\Users\shahk\Downloads\123446.png"
 ![
 **A square image at actual size and with a bottom caption.**
 Loaded from the latest version of image on GitHub.
 ](123446.png "Wide image"){#fig:-image}
 
-Table 3: A summary of pertinent information of road construction projects in USA
-Figure @fig:wide-image
-Image 2.png
+![alt text](C:\Users\shahk\Downloads\123446.png)
 
-2.2 Wrangling and feature derivation 
+<p align="center">
+  <img src="C:\Users\shahk\Downloads\123446.png" width="350" title="hover text">
+  <img src="C:\Users\shahk\Downloads\123446.png" width="350" alt="accessibility text">
+</p>
 
+[Table 3: A summary of pertinent information of road construction projects in USA]{.semibold}
+
+
+[2.2 Wrangling and feature derivation]{.semibold} 
 It can be seen from Table 2 that the project duration is not explicitly stated. Hence, the project duration was defined to be the difference between the start and end time, after preprocessing the String data entries to a Date format. Table 4 shows the resulting features after preprocessing. 
 
-Table 4: Derivation of project duration from raw data
-Figure @fig:wide-image
-image 3.png
+[Table 4: Derivation of project duration from raw data]{.semibold}
 
-Figure @fig:wide-image
-image 4.png
 
 Having computed the project durations as shown in Table 4, some anomalies were detected in the data. The 2nd and 3rd observations show that about 0.43mi and 0.19mi (692m and 305m) of road span was constructed in 1day respectively, whereas about 0.03mi (or 48m) was constructed in 8days as shown in the 4th entry which is unrealistic. To resolve this, a further investigation was done on the narrative of the dataset from Kaggle, and it was deduced that some of the observations were just minor repair works on existing roads (which would not take a long time irrespective of the road span) while others were new construction projects which takes longer to complete. Unfortunately, there exist no feature in the dataset that reveals if an observation was a minor repair task or a major construction task. To circumvent this, observations corresponding to project durations less than 50 days were filtered out, resulting in a dataset of 43,134 observations significantly dominated by new road construction projects or at least projects lasting longer than 50days. Furthermore, three (3) categories of projects durations were designated as short-, medium- and long-term new road construction projects. A short-term new road construction project is defined as one lasting less than 100 days, while a medium-term project lasts between 100-300 days, and a long-term project lasts longer the 300 days. Table 5 shows the resulting data after grouping into the specified classes.
 
-Table 5: Dataset for new road construction projects in US, or projects exceeding 50days of duration
+[Table 5: Dataset for new road construction projects in US, or projects exceeding 50days of duration]{.semibold}
 
-Figure @fig:wide-image
-image 5.png
 
-2.2.1 Feature detection and EDA 
+[2.2.1 Feature detection and EDA]{.semibold} 
 
 The resulting dataset as presented in Table 5, was processed to reveal key features. A rough guess was made that the numeric features quantifying environmental conditions like temperature, humidity, precipitation, wind speed, and pressure together with the road construction span or “Distance” affects the proje t duration. This can be seen from the histogram plots of these features, as there exit a considerable spread in their distributions. It was further assumed that the average amount of these quantities (e.g., Temperature) was recorded during the entire project duration, as this information was not explicitly stated in the dataset description. Thus, given the expected or average environmental conditions, and the span or extent of the road construction, the developed model is expected to predict the class of the completion time of the project as short, medium or long term.  Table 6 shows the summary of the initial features selected for the development of the model. 
 
