--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -41,17 +41,17 @@ The csv file obtained from Kaggle was composed of over 6.1 million observations,
 
 [Table 2: Dataset of road construction projects in USA]{.semibold} 
 
-src="C:\Users\shahk\Downloads\123446.png"
+src="https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/"
 ![
 **A square image at actual size and with a bottom caption.**
 Loaded from the latest version of image on GitHub.
-](123446.png "Wide image"){#fig:-image}
+](https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/ "Wide image"){#fig:-image}
 
 ![alt text](C:\Users\shahk\Downloads\123446.png)
 
 <p align="center">
-  <img src="C:\Users\shahk\Downloads\123446.png" width="350" title="hover text">
-  <img src="C:\Users\shahk\Downloads\123446.png" width="350" alt="accessibility text">
+  <img src="https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/" width="350" title="hover text">
+  <img src="https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/" width="350" alt="accessibility text">
 </p>
 
 [Table 3: A summary of pertinent information of road construction projects in USA]{.semibold}
