--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -41,18 +41,10 @@ The csv file obtained from Kaggle was composed of over 6.1 million observations,
 
 [Table 2: Dataset of road construction projects in USA]{.semibold} 
 
-src="https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/"
-![
-**A square image at actual size and with a bottom caption.**
-Loaded from the latest version of image on GitHub.
-](https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/ "Wide image"){#fig:-image}
+![](vscode-remote://www.prairielearn.org/home/coder/cee-492-term-project-fall-2022-jakt/cee-492-term-project-fall-2022-jakt-2/content/images/Image%205.png)
 
-![alt text](C:\Users\shahk\Downloads\123446.png)
 
-<p align="center">
-  <img src="https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/" width="350" title="hover text">
-  <img src="https://pixabay.com/photos/tree-cat-silhouette-moon-full-moon-736877/" width="350" alt="accessibility text">
-</p>
+
 
 [Table 3: A summary of pertinent information of road construction projects in USA]{.semibold}
 
