--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -44,6 +44,16 @@ The csv file obtained from Kaggle was composed of over 6.1 million observations,
 ![](vscode-remote://www.prairielearn.org/home/coder/cee-492-term-project-fall-2022-jakt/cee-492-term-project-fall-2022-jakt-2/content/images/Image%205.png)
 
 
+<img src="Image 5.png" width="800" />
+
+<img src="img/Image 5.png" />
+
+![](images/Image 5.png)
+
+image: url("C:\Users\shahk\Downloads\Image 5.png")
+
+="images\Image 5.png">
+
 
 
 [Table 3: A summary of pertinent information of road construction projects in USA]{.semibold}
