--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,11 +1,13 @@
 ## Abstract {.page_break_before}
 
+**Bold** __1.0 Introduction__
 A nationwide dataset of road construction and closure events, including data from 49 US states is chosen for the project. The roadwork included in this dataset's construction events ranges from minor paving repairs to significant undertakings that might take months to complete. Several APIs that provide streaming traffic incident (or event) data are used to collect the data between January 2016 and December 2021. These APIs transmit traffic information gathered by several organizations, including the US and state departments of transportation, law enforcement organizations, traffic cameras, and traffic sensors embedded in the road networks. The number of construction and shutdown records in this dataset currently stands at roughly 6.2 million. 
 
 In general, this dataset can be used for a wide range of applications, including the prediction of short- and long-term road construction, the prediction of road closures, the study of the life cycle of road construction, the development of insights to help city planners choose construction sites wisely with the most negligible negative impact on traffic flow, and the investigation of the influence of precipitation or other environmental stimuli on the need for road work. The dataset is being updated on an annual basis. The data will be obtained from US Road Construction and Closures (2016 - 2021), Kaggle, and it is available in CSV format. Presently, the dataset contains 6,170,627 observations comprising of features like Construction severity, Latitude and longitude, Precipitation, Traffic signal and many such taking a total of 47 columns. Table 1 elaborates the specifics of this data set. Using this dataset, a machine learning model will be developed to predict the duration of a new road construction project as short, medium, or long term, given inputs of pertinent features derived from Table 1. The developed model will be cross validated in four (4) folds, to be made suitable for accurate and robust predictions. With this model, it is envisaged that contractors, city planners and relevant authorities can categorize potential road construction projects based on expected average weather conditions, for better planning and project delivery.
 
 To achieve this goal, data wrangling will be performed. The essential data frames for the study will be extracted from the original dataset followed by exploratory data analysis (EDA). EDA will enable us to derive insights by forming a pattern for better visualization and exploration.  Based on this, pertinent features will be realized to build a classification model that accurately predicts the duration of a road construction project.
 
+[Table 1: Description of Undertaking Dataset]{.semibold}
 
 |[Features]{.center}|[Description]{.center}|
 |:------------|:-------------------------------------|
@@ -30,13 +32,12 @@ To achieve this goal, data wrangling will be performed. The essential data frame
 |Traffic Details|Annotations which indicate traffic calming, signal, turning loop|
 |Light Details|Annotations which indicate sunrise, sunset, civil twilight, nautical twilight, astronomical twilight|
 
-[Table: Description of Undertaking Dataset]{.semibold}
-{#tbl:features}
+**Bold** __2.0 Data Wrangling and Exploratory Data Analysis__
 
-[2.0 Data Wrangling and Exploratory Data Analysis]{.semibold}
 The data obtained from Kaggle is highly generic and unstructured, hence unsuited for analysis in its raw form. To achieve the goals of our design, an initial data wrangling was performed to put the data in the right format followed by EDA to determine pertinent features that affect road construction duration in USA.
 
 [2.1.1 Data Cleaning]{.semibold}
+
 The csv file obtained from Kaggle was composed of over 6.1 million observations, which would have been computationally expensive to work with. To reduce the burden of computational time, while still retaining a good representation of the data, 1,048,575 observations (15% original data) were randomly selected with R. The data was converted to a data frame format suitable for analysis with Julia. However, some features were discovered with missing entries, which would be adversarial to subsequent codes and functions. To resolve this problem, a package in Julia (Missing package) was leveraged to filter out all observations with one or more missing entries. This process further reduced the size of the dataset to 482,849. Then, an intuitive search was made of pertinent features that could affect road construction duration, like the length of the road extent affected by the construction (denoted by “Distance” in miles), the total amount of precipitation, and other environmental factors. Although some of these pertinent features were discovered, most of the entries of each observation of these features were not in the format suitable for visualization (which requires real numbers) i.e., some variables were Strings, or Boolean values, hence the need to clean the data. Table 2 below shows a segment of the dataset after it has been roughly sampled, and missing entries removed, while Table 3 shows the summary of the dataset.
 
 [Table 2: Dataset of road construction projects in USA]{.semibold} 
@@ -48,6 +49,7 @@ The csv file obtained from Kaggle was composed of over 6.1 million observations,
 ![](images/Image 2.png)
 
 [2.2 Wrangling and feature derivation]{.semibold} 
+
 It can be seen from Table 2 that the project duration is not explicitly stated. Hence, the project duration was defined to be the difference between the start and end time, after preprocessing the String data entries to a Date format. Table 4 shows the resulting features after preprocessing. 
 
 [Table 4: Derivation of project duration from raw data]{.semibold}
@@ -61,7 +63,6 @@ Having computed the project durations as shown in Table 4, some anomalies were d
 [Table 5: Dataset for new road construction projects in US, or projects exceeding 50days of duration]{.semibold}
 
 ![](images/Image 5.png)
-
 
 [2.2.1 Feature detection and EDA]{.semibold} 
 
@@ -88,6 +89,7 @@ Figure 5 revealed Humidity as a less promising feature for the project task beca
 ![](images/Image 10.png)
 
 [2.3 Dimensionality reduction]{.semibold}
+
 To further explore the possibility of getting a concise representation of the dataset, and improve the model accuracy, PCA was done to transform the data and reduce the size of the feature space. This analysis revealed that with just two principal components, over 97% of the variance in the original dataset could be captured, which is a good representation of the original data and dramatically reduces the number of features to two in the PCA coordinate system. Code snippet 3 below shows the code and results obtained from the PCA analysis. 
 
 ![](images/Image 11.png)
@@ -102,9 +104,9 @@ Indeed, the PCA shows promise of reducing the feature space, as scatter plots co
 
 Although one could imagine that the first 2 principal components (that account for over 97% of the variance in the data) would be sufficient for the classification task, this is not the case. The plots in fig.7 reveal that the 4th, 5th, 6th, 7th, and 8th PCA coordinate frames also offer significant promise for the project goal. Additionally, the boxplots created for outlier detection will further guide in the decision tree creation.  It can be seen from the plots in figures 7 and 8, that cuts can be made readily made to develop robust decision trees based on the Gini-impurity algorithm.
 
-[3.0. Predictive model development]{.semibold}
- The predictive model development stage would leverage both the original feature space (with either Temperature of Wind chill dropped out) and the PCA feature space. Series of classification tree networks would be developed and validated with a confusion matrix plot. For the PCA-feature-space case, given a test data observation, it must be transformed to the PCA coordinate frame before evaluation on the model. As earlier stated, the model would be validated on four folds i.e.,4 sets of the original data would be created, and three would be used for training, while one (1) for testing, and this process would be repeated on all four sets of the data. This would potentially yield a robust and accurate model for the project task.
+**Bold** __3.0. Predictive model development__
 
+ The predictive model development stage would leverage both the original feature space (with either Temperature of Wind chill dropped out) and the PCA feature space. Series of classification tree networks would be developed and validated with a confusion matrix plot. For the PCA-feature-space case, given a test data observation, it must be transformed to the PCA coordinate frame before evaluation on the model. As earlier stated, the model would be validated on four folds i.e.,4 sets of the original data would be created, and three would be used for training, while one (1) for testing, and this process would be repeated on all four sets of the data. This would potentially yield a robust and accurate model for the project task.
 
 [References:]{.semibold}
 
